<?xml version="1.0"?>
<package format="2">
  <name>franka_mujoco</name>
  <version>0.0.0</version>
  <description>The franka_mujoco package</description>

  <maintainer email="dleins@techfak.de">David Leins</maintainer>
  <license>GPLv3</license>

  <author email="dleins@techfak.de">David Leins</author>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>angles</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tinyxml</depend>
  <depend>message_generation</depend>
  <depend>control_msgs</depend>
  <depend>control_toolbox</depend>
  <depend>controller_manager</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>transmission_interface</depend>
  <depend>eigen_conversions</depend>
  <depend>franka_hw</depend>
  <!-- <depend>franka_msgs</depend> -->
  <depend>franka_gripper</depend>
  <depend>franka_example_controllers</depend>
  <depend>kdl_parser</depend>

  <export>
    <controller_interface plugin="${prefix}/franka_gripper_mujoco_plugin.xml" />
  </export>
</package>
